--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-content-loader": "^6.0.3",
     "react-dom": "^17.0.1",
     "react-transition-group": "^4.4.1",
     "styled-components": "^5.2.1",
